--- a/index.html
+++ b/index.html
@@ -2,10 +2,43 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8">
-    <title>Web電卓</title>
+    <title>Web Calculator</title>
     <link rel="stylesheet" href="./styls.css">
     <script src="./script.js"></script>
 </head>
 <body>
+    <table>
+        <caption id="hyouji">0</caption>
+        <tr>
+            <td><button onclick="add()" id="kigou">(</button></td>
+            <td><button onclick="add()" id="kigou">)</button></td>
+            <td><button onclick="add()">%</button></td>
+            <td><button onclick="add()">AC</button></td>
+        </tr>
+        <tr>
+            <td><button onclick="add(7)">7</button></td>
+            <td><button onclick="add(8)">8</button></td>
+            <td><button onclick="add(9)">9</button></td>
+            <td><button onclick="add()">÷</button></td>
+        </tr>
+        <tr>
+            <td><button onclick="add(4)">4</button></td>
+            <td><button onclick="add(5)">5</button></td>
+            <td><button onclick="add(6)">6</button></td>
+            <td><button onclick="add()">×</button></td>
+        </tr>
+        <tr>
+            <td><button onclick="add(1)">1</button></td>
+            <td><button onclick="add(2)">2</button></td>
+            <td><button onclick="add(3)">3</button></td>
+            <td><button onclick="add()">-</button></td>
+        </tr>
+        <tr>
+            <td><button onclick="add(0)">0</button></td>
+            <td><button onclick="add()">.</button></td>
+            <td><button onclick="add()">=</button></td>
+            <td><button onclick="add()">+</button></td>
+        </tr>
+    </table>
 </body>
 </html>
