--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <table>
         <caption id="hyouji">0</caption>
         <tr>
-            <td><button onclick="add()" id="kigou">(</button></td>
-            <td><button onclick="add()" id="kigou">)</button></td>
+            <td><button onclick="add()" class="kigou">(</button></td>
+            <td><button onclick="add()" class="kigou">)</button></td>
             <td><button onclick="add()">%</button></td>
             <td><button onclick="add()">AC</button></td>
         </tr>
