逆ポーランド

--- a/index.html
+++ b/index.html
@@ -10,34 +10,34 @@
     <table>
         <caption id="hyouji">0</caption>
         <tr>
-            <td><button onclick="add()" class="kigou">(</button></td>
-            <td><button onclick="add()" class="kigou">)</button></td>
-            <td><button onclick="add()">%</button></td>
-            <td><button onclick="add()">AC</button></td>
+            <td><button onclick="addnum()" class="kigou">(</button></td>
+            <td><button onclick="addnum()" class="kigou">)</button></td>
+            <td><button onclick="addnum()">%</button></td>
+            <td><button onclick="allclear()">AC</button></td>
         </tr>
         <tr>
-            <td><button onclick="add(7)">7</button></td>
-            <td><button onclick="add(8)">8</button></td>
-            <td><button onclick="add(9)">9</button></td>
-            <td><button onclick="add()">÷</button></td>
+            <td><button onclick="addnum(7)">7</button></td>
+            <td><button onclick="addnum(8)">8</button></td>
+            <td><button onclick="addnum(9)">9</button></td>
+            <td><button onclick="divide()">÷</button></td>
         </tr>
         <tr>
-            <td><button onclick="add(4)">4</button></td>
-            <td><button onclick="add(5)">5</button></td>
-            <td><button onclick="add(6)">6</button></td>
-            <td><button onclick="add()">×</button></td>
+            <td><button onclick="addnum(4)">4</button></td>
+            <td><button onclick="addnum(5)">5</button></td>
+            <td><button onclick="addnum(6)">6</button></td>
+            <td><button onclick="multiple()">×</button></td>
         </tr>
         <tr>
-            <td><button onclick="add(1)">1</button></td>
-            <td><button onclick="add(2)">2</button></td>
-            <td><button onclick="add(3)">3</button></td>
-            <td><button onclick="add()">-</button></td>
+            <td><button onclick="addnum(1)">1</button></td>
+            <td><button onclick="addnum(2)">2</button></td>
+            <td><button onclick="addnum(3)">3</button></td>
+            <td><button onclick="minus()">-</button></td>
         </tr>
         <tr>
-            <td><button onclick="add(0)">0</button></td>
-            <td><button onclick="add()">.</button></td>
-            <td><button onclick="add()">=</button></td>
-            <td><button onclick="add()">+</button></td>
+            <td><button onclick="addnum(0)">0</button></td>
+            <td><button onclick="ok()">OK</button></td>
+            <td><button onclick="equal()">=</button></td>
+            <td><button onclick="plus()">+</button></td>
         </tr>
     </table>
 </body>
