--- a/index.html
+++ b/index.html
@@ -7,38 +7,47 @@
     <script src="./script.js"></script>
 </head>
 <body>
-    <table>
-        <caption id="hyouji">0</caption>
+<div id="wrapper">
+    <table id="description">
+        <tr><td>電卓(逆ポーランド式)</td></tr>
+        <tr><td>使い方</td></tr>
         <tr>
-            <td><button onclick="addnum()" class="kigou">(</button></td>
-            <td><button onclick="addnum()" class="kigou">)</button></td>
-            <td><button onclick="addnum()">%</button></td>
-            <td><button onclick="allclear()">AC</button></td>
+            <td>入力する数字を確定したら、OKを押す。</td>
         </tr>
+    </table>
+    <table id="calculator">
+        <caption id="display">0</caption>
         <tr>
-            <td><button onclick="addnum(7)">7</button></td>
-            <td><button onclick="addnum(8)">8</button></td>
-            <td><button onclick="addnum(9)">9</button></td>
+            <td><button onclick="allclear()" id="ac">AC</button></td>
+            <td><button onclick="mod()">%</button></td>
             <td><button onclick="divide()">÷</button></td>
+            <td><button onclick="equal()">=</button></td>
         </tr>
         <tr>
-            <td><button onclick="addnum(4)">4</button></td>
-            <td><button onclick="addnum(5)">5</button></td>
-            <td><button onclick="addnum(6)">6</button></td>
+            <td><button onclick="addNum(7)">7</button></td>
+            <td><button onclick="addNum(8)">8</button></td>
+            <td><button onclick="addNum(9)">9</button></td>
             <td><button onclick="multiple()">×</button></td>
         </tr>
         <tr>
-            <td><button onclick="addnum(1)">1</button></td>
-            <td><button onclick="addnum(2)">2</button></td>
-            <td><button onclick="addnum(3)">3</button></td>
+            <td><button onclick="addNum(4)">4</button></td>
+            <td><button onclick="addNum(5)">5</button></td>
+            <td><button onclick="addNum(6)">6</button></td>
             <td><button onclick="minus()">-</button></td>
         </tr>
         <tr>
-            <td><button onclick="addnum(0)">0</button></td>
-            <td><button onclick="ok()">OK</button></td>
-            <td><button onclick="equal()">=</button></td>
+            <td><button onclick="addNum(1)">1</button></td>
+            <td><button onclick="addNum(2)">2</button></td>
+            <td><button onclick="addNum(3)">3</button></td>
             <td><button onclick="plus()">+</button></td>
         </tr>
+        <tr>
+            <td><button onclick="addNum(0)">0</button></td>
+            <td><button onclick="addNum()" disabled>(</button></td>
+            <td><button onclick="addNum()" disabled>)</button></td>
+            <td><button onclick="ok()" id="ok">OK</button></td>
+        </tr>
     </table>
+</div>
 </body>
 </html>
